@@ -21,6 +21,7 @@
   -stretch integer -> -stretch integral,
   -keep-aspect 1to1 -> image-aspect square-pixels,
   -[no]-opengl -> -[no]-video-accel
+* src/ui.c: Reorder the Video Mode Settings menu, for better usability.
 
 2011-04-04  James Wilkinson  <james@slor.net>
 * configure.ac, Makefile.in: maintain support for older compilers (DOS, BeOS)
